# thermal2pro

./: .choices  .gitignore  .repo_ignore  .rules  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_integration_tests.py  run_tests.py  storage_handler.py  thermal_camera.py
.github/workflows/: test.yml
docs/: INSTALL.md
scripts/: setup.sh  setup_tests.sh  thermal2pro.service
src/thermal2pro/: main.py
src/thermal2pro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/thermal2pro/camera/: __init__.py  mock_camera.py  processing.py
src/thermal2pro/storage/: handler.py
src/thermal2pro/ui/: cairo_handler.py  live_view.py  style.css  window.py
src/thermal2pro/ui/modes/: __init__.py  base_mode.py  live_view_mode.py
test_reports/: summary.txt  test_results.json
tests/: conftest.py  test_cairo_handling.py  test_camera.py  test_camera_processing.py  test_integration.py  test_live_view.py  test_modes.py  test_storage.py  test_ui.py
